--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "my-todo-backend-migration",
   "main": "./src/server.ts",
   "scripts": {
-    "dev": "npx nodemon"
+    "dev": "npx nodemon",
+    "build": "tsc && tsc-alias"
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity": "^3.592.0",
@@ -29,8 +30,7 @@
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20",
     "uuid": "^10.0.0",
-    "winston": "^3.13.0",
-    "zod": "^3.23.8"
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
@@ -50,6 +50,7 @@
     "@types/uuid": "^9.0.8",
     "eslint": "^8.57.0",
     "globals": "^15.4.0",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript-eslint": "^7.12.0"
   }
