--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-status": "^1.7.4",
     "jade": "^1.11.0",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.5",
